--- a/Demo/Demo/Demo/Resources/Storyboard/Base.lproj/Main.storyboard
+++ b/Demo/Demo/Demo/Resources/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V6i-gk-Ja9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V6i-gk-Ja9">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -361,7 +361,7 @@ Learn more about Account Migration</string>
                                             </constraints>
                                         </progressView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Nym-tb-yKn">
-                                            <rect key="frame" x="0.0" y="0.0" width="115" height="113"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="115" height="93"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UUa-md-1lU">
                                             <rect key="frame" x="0.0" y="93" width="115" height="18"/>
@@ -375,7 +375,7 @@ Learn more about Account Migration</string>
                                     <constraint firstItem="Nym-tb-yKn" firstAttribute="leading" secondItem="CMr-dC-ylL" secondAttribute="leading" id="4Zv-nv-bcX"/>
                                     <constraint firstItem="Nym-tb-yKn" firstAttribute="top" secondItem="CMr-dC-ylL" secondAttribute="top" id="CGR-9o-cMQ"/>
                                     <constraint firstAttribute="trailing" secondItem="UUa-md-1lU" secondAttribute="trailing" id="Con-1K-mxr"/>
-                                    <constraint firstItem="AxD-M1-Kvi" firstAttribute="top" secondItem="Nym-tb-yKn" secondAttribute="bottom" id="FGR-HI-ogG"/>
+                                    <constraint firstItem="AxD-M1-Kvi" firstAttribute="top" secondItem="Nym-tb-yKn" secondAttribute="bottom" constant="20" id="FGR-HI-ogG"/>
                                     <constraint firstItem="AxD-M1-Kvi" firstAttribute="leading" secondItem="CMr-dC-ylL" secondAttribute="leading" id="Hoz-44-GVK"/>
                                     <constraint firstAttribute="trailing" secondItem="AxD-M1-Kvi" secondAttribute="trailing" id="VZS-p7-vaX"/>
                                     <constraint firstAttribute="bottom" secondItem="AxD-M1-Kvi" secondAttribute="bottom" id="YzE-BW-nB7"/>
